log_output/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logoutput-svc
spec:
  type: ClusterIP
  selector:
    app: logs
  ports:
    - port: 4545
      protocol: TCP
      targetPort: 3070
